@@ -316,6 +316,7 @@ struct options
     int std_c99;                /* enable C99 keywords/constructs */
     int std_c11;                /* enable C11 keywords/constructs */
     int std_c23;                /* enable C23 keywords/constructs */
+    int std_c2y;                /* enable C2y keywords/constructs */
     int std_sdcc;               /* enable SDCC extensions to C */
     int dollars_in_ident;       /* zero means dollar signs are punctuation */
     int signed_char;            /* use signed for char without signed/unsigned modifier */
